heading and image and table have been created and developed responsive for the elements

--- a/src/components/CryptocurrencyTracker/index.css
+++ b/src/components/CryptocurrencyTracker/index.css
@@ -1,1 +1,8 @@
 /* Write your CSS here */
+.app-Container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  height: 100vh;
+}
