--- a/src/components/CryptocurrenciesList/index.css
+++ b/src/components/CryptocurrenciesList/index.css
@@ -1,1 +1,63 @@
 /* Write your CSS code here */
+/* Write your CSS code here */
+.Item-Container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 90vh;
+  width: 95%;
+  font-family: Roboto;
+}
+.heading {
+  color: #00e7ff;
+  font-size: 40px;
+}
+.image {
+  width: 95%;
+  height: 30vh;
+  margin-bottom: 15px;
+}
+.table-Container {
+  border: 4px solid #00e7ff;
+  border-radius: 5px;
+  width: 90%;
+  height: 30vh;
+}
+.table-heading-Container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: #092e33;
+  height: 6vh;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: white;
+}
+
+.tabel-heading {
+  font-size: 20px;
+  padding-left: 20px;
+}
+
+.currency-Container {
+  margin-left: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-right: 10px;
+}
+
+.list-Container {
+  list-style: none;
+}
+
+@media screen and (max-width: 767px) {
+  .heading {
+    font-size: 20px;
+  }
+  .tabel-heading {
+    font-size: 10px;
+    padding: 5px;
+    align-self: center;
+  }
+}
